--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 		<p>The idea is that since text is meant to be read, our task is to make the process of reading it as comfortable as possible. This means that whoever reading should be able to do so without straining their eyes or having to move closer to (or further from) the screen. Just as if they were comfortably reading a book from their favorite armchair.</p>
 		<p>To achieve this we need to make sure that the perceived text size (taking the viewing distance into account) rather than the metric text size makes sense. The further away from the screen, the bigger the text needs to be. Currently we find between 18 and 22 px to be reasonable for desktop webpages, 12 to 16 px for complex desktop UI?s, and 24 to 28 px for console UI?s.</p>
 		<p>If in doubt, just grab a camera and take a picture of the text from the desired viewing distance and compare this to a picture of a page from a regular textbook taken from 30 to 40 cm away. Alternatively hold the book somewhere between yourself and the screen while keeping one of your eyes closed. If the digital text is smaller than the printed one you?ll want to go bigger.</p>
+	<div class="col1">col1</div>
+	<div class="col1">col2</div>
+	<div class="col1">col3</div>
+	<div class="col1">col4</div>
+	<div class="col1">col5</div>
+	<div class="col1">col6</div>
+	<div class="col1">col7</div>
+	<div class="col1">col8</div>
+	<div class="col1">col9</div>
+	<div class="col1">col10</div>
+	<div class="col1">col11</div>
+	<div class="col1">col12</div>
 	</div>
     </body>
 </html>
